<resources>
    <string name="app_name">Login App</string>
    <string name="text_login">Login</string>
    <string name="text_signup">Sign up</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="set_a_password">Set a password</string>
</resources>
